# rust_kafka_hello_world

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
contracts/: Cargo.toml  README.md
contracts/src/: lib.rs  mailer.rs  stream_processor.rs
delivery/: Cargo.toml
delivery/src/: lib.rs
emails/: Cargo.toml
emails/src/: lib.rs
infra/: Cargo.toml  README.md
infra/src/: kafka.rs  lib.rs  mailer.rs
notifications/: Cargo.toml
notifications/src/: main.rs
notifications/src/domain/: mod.rs
notifications/src/domain/notifications/commands/: listen_for_messages.rs  mod.rs  send_email_notification.rs
orders/: .env  Cargo.toml
orders/src/: main.rs
orders/src/domain/: mod.rs
orders/src/domain/orders/: mod.rs
orders/src/domain/orders/commands/: create_order.rs
orders/src/routes/: mod.rs
orders/src/routes/orders/: mod.rs  viewmodel.rs
payments/: .env  Cargo.toml
payments/src/: main.rs
payments/src/domain/: mod.rs
payments/src/domain/payments/commands/: listen_for_messages.rs  mod.rs  process_payment.rs
shipping/: .env  Cargo.toml
shipping/src/: lib.rs  main.rs
shipping/src/domain/: mod.rs
shipping/src/domain/shipping/commands/: dispatch_package.rs  listen_for_messages.rs  mod.rs
