[package]
name = "notifications"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1"
tracing-futures = "0.2.0"
tracing-subscriber = "0.2"
dotenv = "0.15.0"
infra = { path = "../infra" }
contracts = { path = "../contracts" }