[package]
name = "orders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
actix-rt = "2.2.0"
actix-cors = "0.5.4"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.0"
tracing-appender = "0.2.0"
tracing-actix-web = "0.2.1"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
