[package]
name = "payments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.19"
tracing-subscriber = "0.3"
tracing-futures = "0.2.0"
tracing-appender = "0.2.0"
tracing-bunyan-formatter = "0.3.2"
async-trait = "0.1.52"
dotenv = "0.15.0"
contracts = { path = "../contracts" }
infra = { path = "../infra" }
tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros", "sync"] }
rand = "0.8.4"